Thu Feb 17 17:46:28 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/testdata/DcpsLib/DcpsLibTest.opendds_diagram:
        * tools/modeling/testdata/DcpsLib/DcpsLibTest_screenshot_2.png:

          Update diagram to account for visual ID changes caused by using
          topcis:Topic in mapping for node Topic.

Thu Feb 17 17:08:36 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/plugin.xml:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/src/org/opendds/modeling/model/opendds/diagram/dcpslib/edit/parts/TopicQoSPoliciesCustomEditPart.java:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/src/org/opendds/modeling/model/opendds/diagram/dcpslib/edit/parts/TopicQoSPoliciesSharedEditPart.java:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfmap:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.trace:

          Fix icon for Topic in palette by having Topic top-level node mapping use topics:Topic instead
          of opendds.topic. This also makes it consistent with ContentFilteredTopic and MultiTopic
          nodes.

Thu Feb 17 16:56:54 UTC 2011  Mike Martinez  <martinez_m@ociweb.com>

          [r4347] 2011-02-17 16:54  martinezm
        * tools/modeling/plugins/org.opendds.modeling.sdk.model/model/Generator.ecore:

          Removed default modelfile name. Changed default target directory
          name to 'model'.

Thu Feb 17 16:50:23 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/features/org.opendds.modeling.feature/feature.xml:

          Updated dependency list by using the "Compute" button in Eclipse.

Thu Feb 17 16:12:26 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/codegen/model/Sync.h:

          Trailing whitespace.
