@@ -1,3 +1,9 @@
+Thu Feb 17 20:30:41 UTC 2011  Adam Mitz  <mitza@ociweb.com>
+
+        * java/tests/messenger/publisher/TestPublisher.java:
+
+          Need a finite timeout for wait_for_acks for use with non-TCP.
+
 Thu Feb 17 17:46:28 UTC 2011  Byron Harris  <harrisb@ociweb.com>
 
         * tools/modeling/testdata/DcpsLib/DcpsLibTest.opendds_diagram:
